minor fix spacing

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
   background-color: #e7e5e4;
 }
 
+hr {
+  margin: 2rem 0rem;
+}
+
 /* container */
 .container {
   padding-left: 1rem;
